Fixing spacing, background & footer

--- a/style.css
+++ b/style.css
@@ -7,12 +7,13 @@ body {
     background: url(./assets/main-image.png), #573824;
     background-size: cover;
     background-position: center;
+    backdrop-filter: blur(6px);
 }
 
 #container {
     box-sizing: border-box;
     width: 800px;
-    margin: 48px auto;
+    margin: 48px auto 0;
     padding: 24px;
     background: #F0E8C2;
     border: red 2px solid;
@@ -20,10 +21,10 @@ body {
 }
 
 #container > * {
-    margin-bottom: 20px;
+    margin-bottom: 24px;
 }
 
-.parent > * {
+.parent:not(:last-child()) > * {
     margin-bottom: 4px;
 }
 
@@ -62,5 +63,6 @@ img {
 
 footer {
     text-align: center;
-    color: #F0E8C2; 
+    color: #F0E8C2;
+    padding: 28px 0 48px;
 }
